--- a/model.ipynb
+++ b/model.ipynb
@@ -1853,7 +1853,7 @@
     "plt.figure(figsize=(20,6))\n",
     "p1 = plt.bar(x[:num], y_test[:num], width=0.4,color='blue', alpha=alpha)\n",
     "p2 = plt.bar(x[:num]+bar_width, predictions[:num], width=0.4, color='red',alpha=alpha)\n",
-    "plt.xlabel(\"날짜\", fontsize=12)\n",
+    "plt.xlabel(\"index\", fontsize=12)\n",
     "plt.ylabel(\"작업 시간\", fontsize=12)\n",
     "plt.legend((p1[0], p2[0]), ('실제 작업시간', '예상 작업시간'), fontsize=12)\n",
     "plt.show()"
